<resources>

    <string name="app_name">Login and SignUp ScreenDesign Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="create_account">Create Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receive">receive</string>
    <string name="doNotReceive">don\'t receive</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="my_doctor">My Doctor</string>
    <string-array name="user_roles">
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>
</resources>