<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"

    android:layout_height="fill_parent">
<LinearLayout
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/sign_up_back"
    android:padding="90dp">

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:textColorHint="@color/black"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/userEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="Address"
        android:textColorHint="@color/black"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <!-- "Login As" text label and Spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="As"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    </LinearLayout>

    <Button
        android:id="@+id/buttonAddTimes"
        android:layout_width="57dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:text="+" />
    <LinearLayout
        android:id="@+id/times_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- This container will hold dynamically added TextViews -->
    </LinearLayout>


    <Spinner
        android:id="@+id/regions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/clinics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/attachPhotoBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Add Passport Photo" />

        <!-- Add an ImageView for the small photo -->
        <ImageView
            android:id="@+id/smallPhotoImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:visibility="gone"/>

    </LinearLayout>
    <!-- Button 1 for attaching photo -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/attachPhotoBtn1"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="add a medical diploma" />

        <ImageView
            android:id="@+id/smallPhotoImageView1"
            android:layout_width="74dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/attachPhotoBtn2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Job Activity Photo" />

        <!-- ImageView for the small photo 2 -->
        <ImageView
            android:id="@+id/smallPhotoImageView2"
            android:layout_width="74dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitCenter"/>

    </LinearLayout>



    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"/>

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:gravity="center"
        android:padding="10dp"
        android:text="Already a user? Login here"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="15dp"/>

</LinearLayout>
</ScrollView>